==> shlee853/swiftF4/Core/Src/Drivers/uart_syslink.c <==
#include <stdint.h>
#include <string.h>
#include "stm32f4xx.h"
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "queue.h"
#include "config.h"
#include "autoconf.h"
#include "uart_syslink.h"
#include "crtp.h"
#include "cfassert.h"
#include "config.h"
#include "queuemonitor.h"
#include "static_mem.h"
#include "led.h"
#define DEBUG_MODULE "U-SLK"
#include "debug.h"
#define UARTSLK_DATA_TIMEOUT_MS 1000
#define UARTSLK_DATA_TIMEOUT_TICKS (UARTSLK_DATA_TIMEOUT_MS / portTICK_RATE_MS)
#define CCR_ENABLE_SET  ((uint32_t)0x00000001)
#define UARTSLK_CLKSUM_SIZE   2

void uartslkDmaInit(void)
{

#ifdef CONFIG_SYSLINK_DMA

	HAL_UART_MspInit(&huart1);

#endif

isUartDmaInitialized = true;

}

void uartslkInit(void)
{
  // initialize the FreeRTOS structures first, to prevent null pointers in interrupts
  waitUntilSendDone = xSemaphoreCreateBinaryStatic(&waitUntilSendDoneBuffer); // initialized as blocking
  uartBusy = xSemaphoreCreateBinaryStatic(&uartBusyBuffer); // initialized as blocking
  xSemaphoreGive(uartBusy); // but we give it because the uart isn't busy at initialization

  syslinkPacketDelivery = STATIC_MEM_QUEUE_CREATE(syslinkPacketDelivery);
  DEBUG_QUEUE_MONITOR_REGISTER(syslinkPacketDelivery);


  uartslkDmaInit();

  // Setting up TXEN pin (NRF flow control)
  // 향후 외부핀 PA4 연결 필요


#if defined(UARTSLK_OUTPUT_TRACE_DATA) || defined(ADC_OUTPUT_RAW_DATA) || defined(IMU_OUTPUT_RAW_DATA_ON_UART)

  huart1.Instance = USART1;
  huart1.Init.BaudRate = 2000000;
  huart1.Init.Mode = UART_MODE_TX;

#else

  huart1.Instance = USART1;
  huart1.Init.BaudRate = 1000000;
  huart1.Init.Mode = UART_MODE_TX_RX;

#endif

  huart1.Init.WordLength = UART_WORDLENGTH_8B;
  huart1.Init.StopBits = UART_STOPBITS_1;
  huart1.Init.Parity = UART_PARITY_NONE;
  huart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
  huart1.Init.OverSampling = UART_OVERSAMPLING_16;


  if (HAL_UART_Init(&huart1) != HAL_OK)
  {
    Error_Handler();
  }

  __HAL_UART_ENABLE_IT(&huart1, UART_IT_RXNE);

  isInit = true;
}

void uartslkSendDataIsrBlocking(uint32_t size, uint8_t* data)
{
  xSemaphoreTake(uartBusy, portMAX_DELAY);
  outDataIsr = data;
  dataSizeIsr = (uint8_t)size;
  dataIndexIsr = 1;
  uartslkSendData(1, &data[0]);
  __HAL_UART_ENABLE_IT(&huart1, UART_IT_TXE);
  xSemaphoreTake(waitUntilSendDone, portMAX_DELAY);
  outDataIsr = 0;
  xSemaphoreGive(uartBusy);
}

void uartslkSendDataDmaBlocking(uint32_t size, uint8_t* data)
{
  if (dmaNrfFlowControlBufferFull) {
    dmaSendWhileNrfBufferFull++;
  }

  if (isUartDmaInitialized)
  {
    xSemaphoreTake(uartBusy, portMAX_DELAY);
    // Wait for DMA to be free
    while(HAL_DMA_GetState(&hdma_usart1_tx) != HAL_DMA_STATE_READY);

    //Copy data in DMA buffer
    memcpy(dmaTXBuffer, data, size);
    initialDMACount = (uint16_t)size;

    if(HAL_UART_Transmit_DMA(&huart1, dmaTXBuffer, size)!=HAL_OK){
    	DEBUG_PRINT("DMA transfer failed\n");
    }
    xSemaphoreTake(waitUntilSendDone, portMAX_DELAY);
    xSemaphoreGive(uartBusy);

  }
}

void uartslkIsr(void)
{
  portBASE_TYPE xHigherPriorityTaskWoken = pdFALSE;

  // the following if statement replaces:
  // if (USART_GetITStatus(UARTSLK_TYPE, USART_IT_RXNE) == SET)
  // we do this check as fast as possible to minimize the chance of an overrun,
  // which occasionally cause problems and cause packet loss at high CPU usage
  if ((UARTSLK_TYPE->SR & (1<<5)) != 0) // if the RXNE interrupt has occurred
  {
    uint8_t rxDataInterrupt = (uint8_t)(UARTSLK_TYPE->DR & 0xFF);
    uartslkHandleDataFromISR(rxDataInterrupt, &xHigherPriorityTaskWoken);
  }
  else if (__HAL_UART_GET_IT_SOURCE(&huart1, UART_IT_TXE) == SET)
  {
    if (outDataIsr && (dataIndexIsr < dataSizeIsr))
    {
//      USART_SendData(&huart1, outDataIsr[dataIndexIsr] & 0x00FF);
      UARTSLK_TYPE->DR = (outDataIsr[dataIndexIsr] & 0x00FF & (uint16_t)0x01FF);
      dataIndexIsr++;
    }
    else
    {
    	__HAL_UART_DISABLE_IT(&huart1, UART_IT_TXE);
//      USART_ITConfig(UARTSLK_TYPE, USART_IT_TXE, DISABLE);
      xSemaphoreGiveFromISR(waitUntilSendDone, &xHigherPriorityTaskWoken);
    }
  }
  else
  {

    asm volatile ("" : "=m" (UARTSLK_TYPE->SR) : "r" (UARTSLK_TYPE->SR)); // force non-optimizable reads
    asm volatile ("" : "=m" (UARTSLK_TYPE->DR) : "r" (UARTSLK_TYPE->DR)); // of these two registers
  }

  portYIELD_FROM_ISR(xHigherPriorityTaskWoken);
}

void uartslkTxenFlowctrlIsr()
{
//  EXTI_ClearFlag(UARTSLK_TXEN_EXTI);
  __HAL_GPIO_EXTI_CLEAR_FLAG(UARTSLK_TXEN_EXTI);
  if (HAL_GPIO_ReadPin(UARTSLK_TXEN_PORT, UARTSLK_TXEN_PIN) == GPIO_PIN_SET)
  {
//    uartslkPauseDma();
    ledSet(LED_GREEN_R, 1);
  }
  else
  {
//    uartslkResumeDma();
    ledSet(LED_GREEN_R, 0);
  }
}
